# auxtest

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.rst  TOOLING.rst  logger_config.json  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: auxtest.checks.rst  auxtest.entrypoint.rst  auxtest.rst  auxtest.util.rst  cli.rst  conf.py  index.rst  modules.rst
scripts/: wheelhouse.sh
src/auxtest/: __init__.py  __main__.py  cli.py  settings.py  util.py
src/auxtest/checks/: check_funcs.py
src/auxtest/entrypoint/: api.py
src/auxtest/util/: log_setup.py
tests/: conftest.py
tests/checks/: test_check_funcs.py
tests/entrypoint/: test_api.py
tests/fixtures/main_api/: check_cologne_ascii.json  check_invalid_city.json  check_key_injection.json  check_no_city.json  check_stuttgart.json
tests/fixtures/weather_map/: chilly_day.json  chilly_night.json  cold_day.json  cold_night.json  hot_day.json  hot_night.json  warm_day.json  warm_night.json
tests/unit/: test_util.py
tests/unit/checks/: test_check_funcs.py
tests/unit/entrypoint/: test_api.py
